--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <h3>Get in Touch</h3>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <span>+1 (555) 123-4567</span>
+                        <span>055 748 6176</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
